--- a/assets/css/light.css
+++ b/assets/css/light.css
@@ -1,23 +1,23 @@
 :root {
     /* light.css */
-    --theme-color: #1890ff; /* 主题蓝（更亮） */
-    --theme-color-hover: #40a9ff; /* 主题蓝 - 悬停 */
-    --theme-color-light: #69c0ff; /* 主题蓝 - 浅 */
-    --theme-secondary: #0050b3; /* 辅助深蓝 */
+    --theme-color: #205EA6; /* 主题蓝（更亮） */
+    --theme-color-hover: #C6DDE8; /* 主题蓝 - 悬停 */
+    --theme-color-light: #66A0C8; /* 主题蓝 - 浅 */
+    --theme-secondary: #1A4F8C; /* 辅助深蓝 */
     --accent-color: #faad14; /* 强调橙色 */
     --error-color: #f5222d; /* 错误红 */
-    --background-color: #fff; /* 背景色 */
-    --background-light: #f0f5ff; /* 纯白背景 */
+    --background-color: #fffcf0; /* 背景色 */
+    --background-light: #f2f0e5; /* 纯白背景 */
     --background-muted: #e6f7ff; /* 次级背景 */
-    --text-primary: #333; /* 主要文本 */
-    --text-secondary: #595959; /* 次要文本 */
-    --text-muted: #8c8c8c; /* 辅助文本 */
-    --border-color: #d9d9d9; /* 边框色 */
+    --text-primary: #100f0f; /* 主要文本 */
+    --text-muted: #b7b5ac; /* 次要文本 */
+    --text-secondary: #6f6e69; /* 辅助文本 */
+    --border-color: #e6e4d9; /* 边框色 */
     --code-background: #f5f5f5; /* 代码块背景（明亮模式） */
     --code-text: #d14; /* 代码文本颜色（明亮模式，偏红的语法高亮） */
-    --theme-color-level0: #ebedf0;
-    --theme-color-level1: #69b1ff;
-    --theme-color-level2: #1677ff;
-    --theme-color-level3: #003eb3;
-    --theme-color-level4: #001d66;
+    --theme-color-level0: #E1ECEB;
+    --theme-color-level1: #92BFDB;
+    --theme-color-level2: #4385BE;
+    --theme-color-level3: #1A4F8C;
+    --theme-color-level4: #101A24;
 }
