--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,8 +29,8 @@
 
 {{ end }}
 :root {
-    --text-primary: #333;
-    --background-color: #fff;
+    --text-primary: #100f0f;
+    --background-color: #fffcf0;
     --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     --mono-font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
     --base-font-size: 18px;
@@ -40,8 +40,8 @@
 }
 
 [data-theme="dark"] {
-    --text-primary: #eee;
-    --background-color: #121212;
+    --text-primary: #cecdc3;
+    --background-color: #100f0f;
 }
     /* Basic */
     html{font-family:var(--font-family);-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}
@@ -234,7 +234,7 @@
     /* Copy code  */
     .highlight{position:relative;overflow:auto;border-radius:5px}
     .highlight:hover .highlight-copy-btn{display:inline-block;border:1px solid var(--background-color)}
-    .highlight-copy-btn{display:none;position:absolute;top:18px;right:2px;border:0;border-radius:4px;padding:1px;font-size:.7em;line-height:1.8;color:#fff;background-color:#777;min-width:25px;text-align:center;border-radius:5px}
+    .highlight-copy-btn{display:none;position:absolute;top:18px;right:2px;border:0;border-radius:4px;padding:1px;font-size:.7em;line-height:1.8;color:#fffcf0;background-color:#777;min-width:25px;text-align:center;border-radius:5px}
     .highlight-copy-btn:hover{transition-duration:.1s;background-color:#666;border:1px solid var(--background-muted) !important;cursor:pointer}
     .highlight-copy-btn,.highlight-copy-btn svg{vertical-align:middle;margin:8px}
 
